--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.22.3",
-    "recharts": "2.12.2"
+    "recharts": "2.12.2",
+    "react-qr-code": "2.0.15"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
